--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>StakeSabai</title>
+		<link rel="icon" href="images/logo_white.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +23,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
+									<span class="symbol"><img src="images/logo_white.png" alt="" /></span><span class="title">StakeSabai</span>
 								</a>
 
 							<!-- Nav -->
@@ -51,44 +52,51 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1>StakeSabai. Help secure blockchains. Earn income.</h1>
+								<p></p>
 							</header>
 							<section class="tiles">
-								<article class="style1">
+								<article class="black_text">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magna</h2>
+										<h2>What is staking?</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Stake your coins to help secure blockchains. Get paid for it.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="black_text">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>Why StakeSabai?</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="black_text">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Feugiat</h2>
+										<h2>Where to start?</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
+								</section>
+								<header class="second_header">
+								<h1 style="
+								    padding-top: 20px;
+									    margin-bottom: 0px;
+										">Offerings</h1>
+								</header>
+								<section class="tiles">
 								<article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
