update social sites

--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
 								<p></p>
 							</header>
 							<section class="tiles">
-								<article class="black_text">
+								<article class="white_text">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>What is staking?</h2>
 										<div class="content">
-											<p>Stake your coins to help secure blockchains. Get paid for it.</p>
+											<p>Get paid to help secure blockchains, while keeping the coins in your own wallet.</p>
 										</div>
 									</a>
 								</article>
-								<article class="black_text">
+								<article class="white_text">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
@@ -78,7 +78,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="black_text">
+								<article class="white_text">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
@@ -93,10 +93,11 @@
 								<header class="second_header">
 								<h1 style="
 								    padding-top: 20px;
+										margin-top: 25px;
 									    margin-bottom: 0px;
 										">Offerings</h1>
 								</header>
-								<section class="tiles">
+								<section class="tiles" style="margin-top: 0px;">
 								<article class="style4">
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
@@ -203,7 +204,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<section>
+							<!--<section>
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -221,22 +222,24 @@
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
 								</form>
-							</section>
+							</section> -->
 							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://twitter.com/SabaiFinance" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://line.me/ti/g2/EeVublmkfMLvf4--i7oVMA" class="icon brands style2 fa-line"><span class="label">Line</span></a></li>
+									<li><a href="https://t.me/SabaiFinance" class="icon brands style2 fa-telegram"><span class="label">Telegram</span></a></li>
+									<li><a href="https://discord.gg/AY6Q7g" class="icon brands style2 fa-discord"><span class="label">Discord</span></a></li>
+									<li><a href="https://medium.com/sabai-finance" class="icon brands style2 fa-medium"><span class="label">Medium</span></a></li>
+									<li><a href="https://www.youtube.com/channel/UCtaEov-VEO65hRskSPqEk1w" class="icon brands style2 fa-youtube"><span class="label">Youtube</span></a></li>
+									<li><a href="https://www.facebook.com/SabaiFinance" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="mailto:contact@sabai.finance" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; <a href="https://sabai.finance">Sabai</a></li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li><a href="https://thenounproject.com/term/feather/1078330/">Feather by Carly Sanker from the Noun Project</a></li>
 							</ul>
 						</div>
 					</footer>
