Added more into index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>StakeSabai. Help secure blockchains. Earn income.</h1>
+								<h1>StakeSabai. Help secure blockchains. Earn more coins.</h1>
 								<p></p>
 							</header>
 							<section class="tiles">
@@ -95,7 +95,7 @@
 								    padding-top: 20px;
 										margin-top: 25px;
 									    margin-bottom: 0px;
-										">Offerings</h1>
+										">Available coins</h1>
 								</header>
 								<section class="tiles" style="margin-top: 0px;">
 								<article class="style4">
