changing text color

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 										">Available coins</h1>
 								</header>
 								<section class="tiles" style="margin-top: 0px;">
-								<article class="style4">
+								<article class="white_text token">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/logo_white.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Tempus</h2>
