Added near protocol

--- a/index.html
+++ b/index.html
@@ -98,12 +98,23 @@
 										">Available coins</h1>
 								</header>
 								<section class="tiles" style="margin-top: 0px;">
-								<article class="white_text token">
+								<article class="black_text_token token">
 									<span class="image">
 										<img src="images/logo_white.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Tempus</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="black_text_token token">
+									<span class="image">
+										<img src="images/logo_white.png" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>NEAR protocol</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
