--- a/index.html
+++ b/index.html
@@ -98,34 +98,34 @@
 										">Available coins</h1>
 								</header>
 								<section class="tiles" style="margin-top: 0px;">
-								<article class="black_text_token token">
+								<article class="white_text_token token">
 									<span class="image">
-										<img src="images/logo_white.png" alt="" />
+										<img src="token_logos/band.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Tempus</h2>
+										<h2>BAND</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								<article class="black_text_token token">
+								<article class="white_text_token token">
 									<span class="image">
-										<img src="images/logo_white.png" alt="" />
+										<img src="token_logos/near.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>NEAR protocol</h2>
+										<h2>NEAR</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="white_text_token token">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="token_logos/cardano.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Aliquam</h2>
+										<h2>Cardano (ADA)</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
