--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="../index.html" class="logo">
 									<span class="symbol"><img src="images/logo_white.png" alt="" /></span><span class="title">StakeSabai</span>
 								</a>
 
@@ -105,7 +105,7 @@
 									<a href="generic.html">
 										<h2>BAND</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Mainnet <br /> Est. APY: 14%</p>
 										</div>
 									</a>
 								</article>
@@ -116,7 +116,7 @@
 									<a href="generic.html">
 										<h2>NEAR</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Mainnet<br />Est. Yield: xx%</p>
 										</div>
 									</a>
 								</article>
@@ -127,84 +127,40 @@
 									<a href="generic.html">
 										<h2>Cardano (ADA)</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Mainnet (Shelley) <br /> Est. Yield: 4%</p>
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<article class="white_text_token token">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="token_logos/kava.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Veroeros</h2>
+										<h2>KAVA</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Mainnet<br />Est. Yield: 6%</p>
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="white_text_token token">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="token_logos/placeholder.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Ipsum</h2>
+										<h2>AVALANCHE (AVAX)</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Mainnet<br />Est. Yield: 10%</p>
 										</div>
 									</a>
 								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
+								<article class="white_text">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
+									<a href="https://t.me/SabaiFinance">
+										<h2>Suggest more...</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Click to talk to us on Telegram.</p>
 										</div>
 									</a>
 								</article>
